# Scripts

./: .gitignore  .gitmodules  README.adoc  README.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.cjs  prettier.config.js  tsconfig.json
ahk/: Alive.ahk  Clicker.ahk  Debain.ahk  GenerateCertificates.ahk  IME.ahk  Libs.ahk  Loop.ahk  OpsClient.ahk  ReadText.ahk  TestAdmin.ahk  Tools.ahk  chrome.ahk  clash.ahk  edge.ahk  frp.ahk  gui.ahk  test.ahk
ahk/clash/: ClashX.ahk  clash.ini
cmd/: vlc.cmd  wsl2.bat
css/: dark.user.css  font.css  font.user.css  hide_image.css  hide_image.user.css  html_wysiwyg.user.css  scroll_bar.css  scroll_bar.user.css  touch_fish.css  userChrome.css  userChrome.css.map  userChrome.less  website.css  website.user.css  wide_screen.css  wide_screen.user.css
js/: click_to_next.js  google.js  jandan.js  nodes.js  oa.js  pac.js  translate.js
js/asciidoc/: test.adoc
js/bookmarklet/: crxDownload.js  design.js
js/config/: pac.js
js/dev/: solar.html  translate.html
js/extension/: manifest.chrome.json  manifest.json
js/puppeteer/: chaoxing.js  chaoxing.js.map  chaoxing.ts  test.js  test.js.map  test.ts
js/tampermonkey/: chaoxing.js  click.js  click_to_next.js  crm.js  deepseek.js  dmhy.js  echartsEditor.js  google.js  jandan.js  jinan-v.js  jinan.js  nodes.js  oa.js  solar.js  translate.js  (+1 more)
python/: crxDownloader.py
reg/: vlc.reg
shell/: ddns.sh  dns_test.sh  dnstest.sh  redis_cluster.sh  rs.sh  show-color.sh  test.sh  wsl2ip.sh
wasm/rust/hello/: Cargo.toml
wasm/rust/hello/src/: lib.rs
(+125 files in other folders)
